# laravel-passport-introspection

./: .env.example  .env.wrk  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: benchmark-results.md  benchmarking.md  development.md
examples/: nginx-slots.conf  sockets_benchmark.rs  sockets_introspect.php
scripts/: curl_env.sh  curl_env_app.sh  curl_env_json.sh  curl_env_proxy.sh  curl_env_sock.sh  mysql_monitor.sh  pre_release.sh  release.sh
src/: app.rs  config.rs  jwt.rs  lib.rs  lru.rs  main.rs  responses.rs  token_cache.rs  validation.rs
src/database/: any.rs  factory.rs  fake.rs  mod.rs  mysql.rs  postgres.rs  traits.rs
src/middlewares/: auth.rs  gateway.rs  mod.rs
src/mono_proxy/: app.rs  mod.rs  route.rs
src/proxy/: app.rs  config.rs  mod.rs  route.rs
src/routes/: introspect.rs  introspect_http.rs  mod.rs
tests/: integration_test.rs
tests/fixtures/: oauth-private.key  oauth-public.key
tests/helpers/: fixtures.rs  jwt.rs  mod.rs  repo.rs
wrk/: .gitignore  access_tokens_factory.rs  init_mysql.sh  mysql_schema.sql  rotate_app_users.lua  rotate_valid_tokens-http.lua  rotate_valid_tokens-json.lua  rotate_valid_tokens.lua  rotate_valid_tokens_proxy.lua  short_token.lua  wrk_env.sh  wrk_env_app.sh  wrk_env_proxy.sh
