[package]
name = "laravel-passport-introspection"
version = "0.3.0"
edition = "2024"
description = "Simple Laravel Passport JWT tokens validator and introspector. Connects to the same database as Authorization Server and used as Auth middleware for Nginx/Ingress/Traefik"
repository = "https://github.com/ulcuber/laravel-passport-introspection"
license = "MIT"
keywords = ["laravel", "oauth"]
default-run = "introspection_server"

[[bin]]
name = "introspection_server"
path = "src/main.rs"
# Don't build this binary during tests. Tests use lib.rs and server mock
test = false

[features]
sockets = []
write-tokens = []
proxy = ["dep:axum-server", "dep:hyper", "dep:hyper-util", "dep:toml"]

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
required-features = ["write-tokens"]

[[bin]]
name = "introspection_socketsd"
path = "src/bin/sockets_introspector.rs"
required-features = ["sockets"]

[[bin]]
name = "introspection_http_socketsd"
path = "src/bin/http_over_sockets_introspector.rs"
required-features = ["sockets"]

[[bin]]
name = "proxy"
path = "src/bin/proxy.rs"
required-features = ["proxy"]

[[bin]]
name = "mono_proxy"
path = "src/bin/mono_proxy.rs"
required-features = ["proxy"]

[[bin]]
name = "wrk_access_tokens_factory"
path = "wrk/access_tokens_factory.rs"
required-features = ["write-tokens"]

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls"], optional = true }
chrono = "0.4.45"
dotenvy = "0.15.7"
hyper = { version = "1.10.1", optional = true, features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.20", optional = true, features = ["client", "client-legacy", "http1"] }
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
lru = { version = "0.18.1" }
once_cell = "1.21.4"
parking_lot = { version = "0.12.5" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.9.0", features = ["postgres", "mysql", "runtime-tokio", "any", "tls-native-tls", "chrono"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = { version = "1.1.3", optional = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.5", features = ["v4"] }

[dev-dependencies]
axum-test = "21.0.0"
